<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/previewLayoutView">

    <LinearLayout
        android:id="@+id/filePreviewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@android:color/background_light">

        <LinearLayout
            android:id="@+id/filePreviewMainImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fileThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fileThumbnail"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                style="@style/AppTheme" />

            <LinearLayout
                android:id="@+id/filePreviewMainDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fileNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fileNameView"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/holo_blue_bright"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/fileDetailsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fileDetailsView"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_bright"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    style="@style/AppTheme" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>