<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:id="@+id/mainLayoutRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/AppTheme"
        tools:context=".MainActivity">

        <view
            android:id="@+id/listViewBackground"
            style="@style/AppTheme"
            class="ssh.net.mobile.android.media.myplayer.BackgroundContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp"></ListView>

            <ImageView
                android:id="@+id/editlistpopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@android:color/transparent"
                android:contentDescription="@string/screenpopup"></ImageView>
        </view>

        <ImageButton
            android:id="@+id/button_edit"
            style="@style/AppTheme"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/fab"
            android:contentDescription="@string/add_files"
            android:onClick="addNewFiles"
            android:src="@drawable/ic_fab"
            android:text="@string/addfiles" />
    </RelativeLayout>


    <!-- Side navigation drawer UI -->
    <ExpandableListView
        android:id="@+id/navList"
        style="@style/AppTheme"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="@android:color/background_light"
        android:divider="#ec020505"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearance"
        android:theme="@style/AppTheme" />

</android.support.v4.widget.DrawerLayout>